[package]
name = "unwinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = "0.26"
memmap = "0.7"
nix = "0.23"
libc = "0.2"
object = "0.28"
findshlibs = "0.10"
thiserror = "1.0"
addr2line = "0.17"